# agent-loop-control

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/agent-loop-coverage/: SKILL.md
.claude/skills/agent-loop-coverage/scripts/: coverage_check.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature.md  security-control.md
.github/workflows/: dependency-review.yml  gitleaks.yml  python-ci.yml
agent_loop/: __init__.py  analyze.py  cli.py  diff_snapshot.py  events.py  ledger.py  policy.py  redaction.py  verifier.py  views.py  yaml_loader.py
agent_loop/collectors/: claude.py
agent_loop/importers/: __init__.py  codex.py
docs/: architecture.md  development-instructions.md  project-brief.md  roadmap.md  security.md
examples/: agent-policy.yaml  ledger-valid.jsonl  verifier-output.txt
examples/claude/: pretooluse.json  settings.json
examples/claude-code/: claude-code-session-input.jsonl
examples/claude-code/claude-code-session-input/subagents/: agent-feedcafe1234.jsonl  agent-feedcafe1234.meta.json
examples/codex/: codex-session-input.jsonl  normalized-output.json  session.jsonl
examples/collector/: claude-hook-input.json  claude-hook-normalized-output.json  claude-settings.json
schemas/: agent-ledger-event.schema.json  agent-policy.schema.json
scripts/: check-docs-hygiene.py
src/agent_loop/: __init__.py  analyzer.py  claude_importer.py  cli.py  collector.py  importer.py  ledger.py  ledger_reader.py  policy.py  repo_context.py  snapshotter.py  timeline.py  tool_kind.py  verifier.py
tests/: conftest.py  test_analyzer.py  test_claude_importer.py  test_cli.py  test_collector.py  test_collectors_importers.py  test_docs.py  test_importer.py  test_ledger.py  test_policy.py  test_policy_redaction.py  test_repo_context.py  test_repo_filters.py  test_schema_examples.py  test_snapshotter.py  test_tool_kind.py  test_views_analyze_diff_cli.py
