[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-loop-control"
version = "0.1.0"
description = "Local-first safety control plane for AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "takibi-lab" }]
dependencies = []

[project.scripts]
agent-loop = "agent_loop.cli:main"

[tool.setuptools.packages.find]
include = ["agent_loop*"]
